// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fails for multiple unknown options 1`] = `
"<red><bold><bold>●<bold> Unrecognized CLI Parameters:</>
<red></>
<red>  Following options were not recognized:</>
<red>  <bold>[\\"jest\\", \\"test\\"]</>
<red></>
<red>  <bold>CLI Options Documentation:</>
<red>  http://facebook.github.io/jest/docs/cli.html</>
<red></>"
`;

exports[`fails for unknown option 1`] = `
"<red><bold><bold>●<bold> Unrecognized CLI Parameter:</>
<red></>
<red>  Unrecognized option <bold>\\"unknown\\".</>
<red></>
<red>  <bold>CLI Options Documentation:</>
<red>  http://facebook.github.io/jest/docs/cli.html</>
<red></>"
`;
